Print colors changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9080
 
-songsFolderPath = C:\\Krish\\Music\\AllTime
+#songsFolderPath = C:\\Krish\\Music\\AllTime
+songsFolderPath = C:\\Krish\\Music\\MusicalTambola
 
