updated spring version and README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9080
 
 #songsFolderPath = C:\\Krish\\Music\\AllTime
-songsFolderPath = C:\\Krish\\Music\\MusicalTambola
+songsFolderPath = /Volumes/HD2/Krishna_Docs/Music1
 
