--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.8.RELEASE'
+		springBootVersion = '2.4.2'
 	}
 	repositories {
 		mavenCentral()
@@ -24,9 +24,9 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.springframework.boot:spring-boot-starter:2.4.2')
+	compile('org.springframework.boot:spring-boot-starter-web:2.4.2')
+	testCompile('org.springframework.boot:spring-boot-starter-test:2.4.2')
 	compile group: 'org.webjars', name: 'angularjs', version: '1.4.9'
 	compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7-1'
 	compile group: 'org.springframework', name: 'spring-web', version: '4.3.12.RELEASE'
@@ -34,4 +34,18 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
 	compile group: 'org.json', name: 'json', version: '20170516'
+}
+
+springBoot {
+	mainClassName = 'com.krish.mlotto.MLottoApplication'
+}
+
+bootJar {
+//    This is overridden by the mainClassName in springBoot{} and added here for reference purposes.
+	mainClassName = 'com.krish.mlotto.MLottoApplication'
+
+//    This block serves the same purpose as the above thus commented out. Added here for reference purposes
+//    manifest {
+//        attributes 'Start-Class': 'com.baeldung.DemoApplication'
+//    }
 }
